--- a/css/theme/black.css
+++ b/css/theme/black.css
@@ -45,14 +45,16 @@ body {
   font-weight: 600;
   line-height: 1.2;
   letter-spacing: normal;
-  text-transform: uppercase;
   text-shadow: none;
   word-wrap: break-word; }
 
 .reveal h1 {
+  color: DeepSkyBlue;
+  text-transform: uppercase;
   font-size: 2.5em; }
 
 .reveal h2 {
+  text-transform: uppercase;
   font-size: 1.6em; }
 
 .reveal h3 {
